# Smart-Asset-Tracker

./: .gitignore  Makefile  README.md  firmware_app  impact_history.csv
AssetTrackerDashboard/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
drivers/: adxl.c  mqtt_client.c  mqtt_clinet.c
include/: mqtt_client.h
src/: main.c
